--- a/index.html
+++ b/index.html
@@ -25,30 +25,39 @@ window.onload = function () {
   <div class="preloader">
  <img class="preloader___photo" src="fav.png" height="100px">
 </div>
-<table class="HomeHeader"><td class="HH_lang"><a href="" class="LINK">RU</a></td>
-<td class="HomeHeaderLogo"><a href="index.html"><img src="fav.png" height="35px"></a></td><td id="HH_menubar"><a href=""><div id="HH_menubar">
+<table class="HomeHeader"><td class="HH_lang"><a href="#ErrorWindow" class="LINK">RU</a></td>
+<td class="HomeHeaderLogo"><a href="index.html"><img src="fav.png" height="35px"></a></td><td id="HH_menubar"><a href="#ErrorWindow"><div id="HH_menubar">
   <span></span>
   <span></span>
   <span></span></div></a>
 </td></table>
-<div id="menuBar" class="modal">
+<div id="ErrorWindow" class="modal">
   <div class="modal-dialog">
     <div class="modal-content">
 
       <div class="modal-body">
                 <a href="#close" title="Close" class="close">×</a>
-        <table id="MenuBarContainer">
-          <td><a class="MenuBarFreePoint" href="/alba/alba_russian/building.html"><img src="MenuBar_building.png" width="50px" ><br>Жилые комплексы</a></td>
-          <td><a class="MenuBarFreePoint" href="/ru"><img src="OliverWhite.png" width="50px" height="50px"><br>Оливер</a></td>
-          <td><a class="MenuBarFreePoint" href="/alba/alba_russian/progs.html"><img src="MenuBarProgs.png" width="50px"><br>Aльба(Progs)</a></td>
 
-        </table>
+          <br>Сайт находится в бета-тестировании. Эта функция пока недоступна.
+
+
 
       </div>
     </div>
   </div>
 </div>
-                <div class="First-Page-Title"></div>
+                <div class="First-Page-Title">
+
+                </div>
+                <table class="Mortal">
+                  <tr>
+                    <td class="NubersOfDeads"  style="width: 200px">30.000+</td><td class="NubersOfDeads"  style="width: 100px">100.000+</td>
+                  </tr>
+                  <tr>
+                    <td class="MortalTitles">Российских семей остались без близких.</td><td class="MortalTitles">Украинцев погибло.</td>
+                  </tr>
+
+                </table>
                 <div class="NewsKeeper">
                   <ul class="StUl">Последние новости:
                     <br><br><li class="StLi">Объявление о частичной мобилизации.
@@ -61,7 +70,6 @@ window.onload = function () {
             </li>
                   </ul>
                 </div>
-              </div>
       <div class="First_Page_Building_Block"><a class="RED_GTitleBlock">Люди</a><a class="WHITE_GTitile"> - правят миром.</a><br><a class="WHITE_Block_STitile">Мы сохраним этот мир вместе.</a>
                   <br><img src="earth.png" class="First_Page_Building_Block_img" id="First_Page_First_Block_Image" style="max-width: 500px">
                 </div>
@@ -89,9 +97,12 @@ window.onload = function () {
         </div>
       </div>
     </div>
-            <a class="LinkToLanguageSelect" href="">Выберите язык...</a><br><br>
+            <a class="LINK" href="#ErrorWindow">Выберите язык...</a><br><br>
 
-    <a class="CELLAR-END-TEXT">Альба, ООО. Все права защищены.</a>
+    <a class="CELLAR-END-TEXT">Информационный ресурс <a class="CELLAR-END-TEXT-RED">"НетВойне"</a>
+    <br><a class="CELLAR-END-TEXT">Авторство: Сизов Андрей.
+    <br>
+  </a>
 </div>
 </body>
 </html>
