--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <title>НетВойне</title>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="keywords" content="Альба">
-<meta name="description" content="Группа компаний Альба">
-<link rel="shortcut icon" href="smalllogo.png"/>
+<meta name="keywords" content="НетВойне">
+<meta name="description" content="Вместе - мы сила.">
+<link rel="shortcut icon" href="fav.png"/>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -67,8 +67,8 @@ window.onload = function () {
                 <li class="StLi">Выезд заграницу.
                     <li class="SmallLi">Спустя сутки после обращения Владимира Путина все билеты на авиарейсы заграницу были распроданы. В аэропортах
                     России введен усиленный контроль пассажиров мужчин. В Беларуси уже начались преследования бежавших из России.</li>
+                    <a class="LINK" href="/news.htm">Больше новостей →</a>
             </li>
-                  </ul>
                 </div>
       <div class="First_Page_Building_Block"><a class="RED_GTitleBlock">Люди</a><a class="WHITE_GTitile"> - правят миром.</a><br><a class="WHITE_Block_STitile">Мы сохраним этот мир вместе.</a>
                   <br><img src="earth.png" class="First_Page_Building_Block_img" id="First_Page_First_Block_Image" style="max-width: 500px">
