--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ window.onload = function () {
                 <li class="StLi">Выезд заграницу.
                     <li class="SmallLi">Спустя сутки после обращения Владимира Путина все билеты на авиарейсы заграницу были распроданы. В аэропортах
                     России введен усиленный контроль пассажиров мужчин. В Беларуси уже начались преследования бежавших из России.</li>
-                    <a class="LINK" href="/news.htm">Больше новостей →</a>
+                    <a class="LINK" href="/nowar/news.htm">Больше новостей →</a>
             </li>
                 </div>
       <div class="First_Page_Building_Block"><a class="RED_GTitleBlock">Люди</a><a class="WHITE_GTitile"> - правят миром.</a><br><a class="WHITE_Block_STitile">Мы сохраним этот мир вместе.</a>
