--- a/index.html
+++ b/index.html
@@ -70,32 +70,45 @@ window.onload = function () {
                     <a class="LINK" href="/nowar/news.htm">Больше новостей →</a>
             </li>
                 </div>
-      <div class="First_Page_Building_Block"><a class="RED_GTitleBlock">Люди</a><a class="WHITE_GTitile"> - правят миром.</a><br><a class="WHITE_Block_STitile">Мы сохраним этот мир вместе.</a>
+      <div class="First_Page_Building_Block"><a class="RED_GTitleBlock">Люди</a><a class="WHITE_GTitile"> - правят миром.</a><br><a class="WHITE_Block_STitile">Мы сохраним мир вместе.</a>
                   <br><img src="earth.png" class="First_Page_Building_Block_img" id="First_Page_First_Block_Image" style="max-width: 500px">
                 </div>
-      <div class="First_Page_Building_Block"><a class="WHITE_GTitile">Остановить <a class="RED_GTitleBlock">войну</a><a class="WHITE_GTitile"> - реально.</a><br><a class="WHITE_Block_STitile">Миссия не для них, а для Нас.</a>
+      <div class="First_Page_Building_Block"><a class="WHITE_GTitile">Почему <a class="RED_GTitleBlock">Путин</a><a class="WHITE_GTitile"> губит Россию.</a>
                   <br><img src="putinLoa.png" class="First_Page_Building_Block_img" id="First_Page_First_Block_Image" style="max-width: 500px">
+      <ul class="StUl" style="margin-right: 20px;">
+                      <li class="StLi">Ложные заявления.
+                          <li class="SmallLi" style="margin-right: 20px;">К данному пункту можно отнести практически любое высказывание Путина, например: в марте и феврале Владимир Владимирович
+                            категорично заверял, что мобилизации (а также использование постоянной армии) не будет и не планируется. Аналогичная ситуация с повышением пенсионного
+                          возраста.</li>
+                  </li>
+                  <li class="StLi">Образовательный абсурд.
+                      <li class="SmallLi" style="margin-right: 20px;">За последние месяцы во всех школах России введены некоторые новшества:
+                        предмет разговоры о "важном", ежедневное поднягие флага под гимн России, а также большое количество классных часов,
+                        посвященных войне и навязыванию патриотизма. Грустно осознавать, что Путин считает, что полюбить страну можно насильным
+                        слушанием гимна и поднятием флага.</li>
+              </li>
+              <li class="StLi">Социальная услуга.
+                  <li class="SmallLi" style="margin-right: 20px;">Все социальные услуги предоставляемые государством:
+                    полиция, медицина, образование и пр. Устарели, пришли в колоссальную негодность. Эти структуры работают некорректно,
+                  можно сказать, что внушащее большинство погрязло в коррупции.</li>
+          </li>
+          <li class="StLi">Денег нет, но...
+              <li class="SmallLi" style="margin-right: 20px;">Средняя по регионам заработная плата учителя русского языка в российских школах
+                составляет не более 22 тыс. рублей за более чем 30 часов. Работая более 8 часов в день учитель не получает даже премий, уже молчим про то, что
+              85% российских школ находятся в предаварийном состоянии.</li>
+      </li>
+      <li class="StLi">Застройка и инфраструктура.
+          <li class="SmallLi" style="margin-right: 20px;">С каждым годом в России сдаются сотни новых жилых комплексов, построенных
+            частными компаниями. Главной проблемой является полное отсутствие участия государства в контроле подчиненных ему структур в развитии инфрастурктуры, например: г. Мурино, население
+          около двухсот тысяч, работает 4 школы, некоторые из них в несколько смен. Дольщики некоторых домов ждут ключи от заветных квартир
+        уже более 20 лет, 30% из числа этих людей уже скончались.</li>
+  </li>
+            </div>
                 </div>
 
 <div class="CELLAR">
   <div class="CELLAR">
-    <div id="openModal" class="modal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h3 class="modal-title">Выберите язык</h3>
-            <a href="#close" title="Close" class="close">×</a>
-          </div>
-          <div class="modal-body">
-            <ul class="tect">
-              <li><a class="SelectedLangLink"><img src="Flag_of_Russia.svg" width="20px" class="LANGUAGE_IMAGES">Русский язык</a></li>
-              <br><li><a class="SelectLangLink" href=""><img src="Flag_of_the_United_Kingdom_(3-5).svg" width="20px" class="LANGUAGE_IMAGES">English</a></li>
-              <br><li><a href="/alba/alba_deutsch/progs.html"  class="SelectLangLink"><img src="Flag_of_Germany.svg" width="20px" class="LANGUAGE_IMAGES">Deutsch</a></li>
-              <br><li><a href="/alba/alba_ukrainian/progs.html"  class="SelectLangLink"><img src="ukr.png" width="20px" class="LANGUAGE_IMAGES">Українська</a></li>
-        </ul>
-          </div>
-        </div>
-      </div>
+
     </div>
             <a class="LINK" href="#ErrorWindow">Выберите язык...</a><br><br>
 
